--- a/a4.html
+++ b/a4.html
@@ -26,6 +26,16 @@
     });
     </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J4WZXR8LMZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J4WZXR8LMZ');
+</script>
+
 </head>
 
 <body>
@@ -58,12 +68,13 @@
       <div id="content">
         <div class="content_item">
 
-          <p class="s1">GSC圖片
+          <p class="s4">GSC圖片
           </p>
           <hr>
-          <p>
-           
-          </p>
+            <p>
+              <a class="s3" href="https://vendor.ecpay.com.tw/User/LogOn_Step1" target="_blank">下單購買(綠界金流ECpay)</a>
+            </p>
+
 
 
           <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you wish to remove the 'ARaynorDesign' link in the footer of the template, please contact me first, but other than that...</p>
