--- a/a5.html
+++ b/a5.html
@@ -26,6 +26,17 @@
     });
     </script>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J4WZXR8LMZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J4WZXR8LMZ');
+</script>
+
 </head>
 
 <body>
@@ -64,6 +75,32 @@
           <p>
             <a class="s3" href="https://line.me/R/ti/g/pK9Mt4GSTo" target="_blank">加入電商的Line群組</a>
           </p>
+          <p>
+            <img src="images/ga-1.jpg" width="80%">
+            <h2>圖1：活躍人數最少5人，瀏覽次數最少35</h2>  
+        </p>
+        <p>
+          <img src="images/ga-2.jpg" width="80%">
+          <h2>截圖事件</h2>  
+      </p>
+      <p>
+          <img src="images/ga-3.jpg" width="80%">
+          <h2>截圖重要事件（必須有2個重要事件）</h2>
+      </p>
+
+<h2>請回答以下問題：</h2>
+
+<h2>1-請問：反映積極參與網站瀏覽的user人數參數是？ (瀏覽超過10秒或在網站內切換網頁)</h2>
+
+<h2>2-請問：初次瀏覽網站人數的參數是？</h2>
+<h2>3-請問：網站的總訪客數量參數是？</h2>
+<h2>4-請問：電商衡量訪客在電商網站上完成購買等特定重要行為的比例，它反映了訪客轉化為顧客的成功程度，是評估網站績效和行銷活動成效的重要指標，請問這個是什麼指標？</h2>
+<h2>5-請問：上述這個指標的英文是什麼？</h2>
+<h2>6-請問：上述這個指標的公式是什麼？</h2>
+<h2>7-請問：請你根據上面的3個事件截圖裡面的數值，請計算網站的這個指標的數值是？</h2>
+
+
+
 
 
 
