--- a/a5.html
+++ b/a5.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
+  <meta name="google-site-verification" content="wzZo-dflH0RrGZTpMUb49gkFDpp-JDsLGvP52Yaw7SQ" />
   <title>110570031 葉仟芳</title>
   <meta name="description" content="free website template" />
   <meta name="keywords" content="enter your keywords here" />
@@ -81,23 +82,39 @@
         </p>
         <p>
           <img src="images/ga-2.jpg" width="80%">
-          <h2>截圖事件</h2>  
+          <h2>圖2：截圖事件</h2>  
       </p>
       <p>
           <img src="images/ga-3.jpg" width="80%">
-          <h2>截圖重要事件（必須有2個重要事件）</h2>
+          <h2>圖3：截圖重要事件（必須有2個重要事件）</h2>
       </p>
 
 <h2>請回答以下問題：</h2>
 
 <h2>1-請問：反映積極參與網站瀏覽的user人數參數是？ (瀏覽超過10秒或在網站內切換網頁)</h2>
+<h2>答:是user_engagement</h2>
 
 <h2>2-請問：初次瀏覽網站人數的參數是？</h2>
+<h2>答:first_visit</h2>
+
 <h2>3-請問：網站的總訪客數量參數是？</h2>
+<h2>答:session_start</h2>
+
 <h2>4-請問：電商衡量訪客在電商網站上完成購買等特定重要行為的比例，它反映了訪客轉化為顧客的成功程度，是評估網站績效和行銷活動成效的重要指標，請問這個是什麼指標？</h2>
+<h2>答:轉換率</h2>
+
 <h2>5-請問：上述這個指標的英文是什麼？</h2>
+<h2>答:Conversion Rate</h2>
+
+
 <h2>6-請問：上述這個指標的公式是什麼？</h2>
+<h2>答:購買轉換率 = (購買重大事件數量 / 總訪客數量) * 100%</h2>
+
+
 <h2>7-請問：請你根據上面的3個事件截圖裡面的數值，請計算網站的這個指標的數值是？</h2>
+<h2>答:購買轉換率 = (4/5)*100%＝80%</h2>
+
+
 
 
 
