--- a/a6.html
+++ b/a6.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
+<meta name="google-site-verification" content="wzZo-dflH0RrGZTpMUb49gkFDpp-JDsLGvP52Yaw7SQ" />
   <title>110570031 葉仟芳</title>
   <meta name="description" content="free website template" />
   <meta name="keywords" content="enter your keywords here" />
@@ -37,6 +38,13 @@
   gtag('config', 'G-J4WZXR8LMZ');
 </script>
 
+<script>
+    function show()
+    {
+      document.getElementById('t2').style.fontSize = t1.value+'px';
+    }
+  </script>
+
 </head>
 
 <body>
@@ -68,7 +76,17 @@
 	  </div><!--close banner_image-->		  
       <div id="content">
         <div class="content_item">
-          <h1>Welcome to your website</h1>
+            <h1 class="s4">挑戰題(4分)</h1>
+            <hr>
+            <p class="s3">
+              輸入數字：<input type="text" id="t1" oninput="show()" class="s2" size="5">
+            </p>
+            <p id="t2" style="color: red;text-align: center;font-weight: bold;">生日快樂</p>
+
+
+
+
+
           <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you wish to remove the 'ARaynorDesign' link in the footer of the template, please contact me first, but other than that...</p>
           <h3>Place your heading here</h3>
           <div style="width:200px; float:left; padding: 0px 20px 10px 0px;"><img alt="image" src="images/image.jpg" /></div>
